@@ -47,13 +47,17 @@ Removed deprecated Story "Priority". [Noam Weinstein]
 
 =item *
 
-Fixed small bugs in TimeChooser where hour/mins of 0 were taken to be null,
-and midnight hour was misunderstood during conversion. [Noam Weinstein]
+Added platform file for RedHat Enterprise Server 5 (ES5) [Jesse Erlbaum]
 
 =item *
 
 Added F<bin/krang_dump_session> CLI util to help track down session
 problems. [Michael Peters]
+
+=item *
+
+Fixed small bugs in TimeChooser where hour/mins of 0 were taken to be null,
+and midnight hour was misunderstood during conversion. [Noam Weinstein]
 
 =item *
 
